Fix missing gap between text and logo.

--- a/css/xp.css
+++ b/css/xp.css
@@ -200,6 +200,7 @@ body
 #logo-text-gap
 {
     display: block;
+    content: " ";
     margin-top: var(--logo-text-gap);
 }
 
